# indi-rollroof-controller

./: .gitignore  README.md
.github/workflows/: arduino-check.yml  c-cpp.yml  cmake-multi-platform.yml
arduino-firmware/RoofController/: RoofController.ino
arduino-firmware/SimpleDigitalFirmataRoofController/: SimpleDigitalFirmataRoofController.ino
indi-driver/: build.sh
indi-driver/indi-aldiroof/: aldiroof.cpp
indi-driver/indi-rollroof/: CMakeLists.txt  indi_rollroof.xml  rollroof.cpp  rollroof.h
models/: arduino-2relay-case.stl  arduino-2relay-cover.stl
